$Author$
$Date$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2010-03-12 [A] Added Luxembourgish to language variables as a preparation for the language file contribution {GauGau}
2010-03-10 [B] Fixed validation issue with curve theme (thread ID 64041) {GauGau}
2010-03-10 [D] Added GD logo {GauGau}
2010-03-10 [B] Fixed error message for invalid meta albums entered in 'content of the main page' (thread ID 63977) {eenemeenemuu}
2010-03-10 [D] Fixed broken images inside documentation that refered to rating {GauGau}
2010-03-08 [C] Fixed missing space between album admin menu items (thread ID 63987) {GauGau}
2010-03-08 [C] Fixed mis-alignement of album description in index view (thread ID 63990) {GauGau}
2010-03-08 [B] Replacing hard-coded words in curve theme with translated variables (thread ID 63985) {GauGau}
2010-03-06 [C] Updated Finnish language file (user contribution) {eenemeenemuu}
2010-03-05 [C] Added minimum height attribute to curve theme to catter for gradient background needing more space{GauGau}
2010-03-05 [M] Counted version number up as a preparation for the upcoming release {GauGau}
2010-03-04 [B] Fixed browse-by-date link in curve theme and missing extension for spacer (thread ID 63947) {GauGau}
2010-03-04 [B] Fixed search issue when private albums are present (thread 63940) {eenemeenemuu}
2010-03-04 [B] Fixed display of empty meta albums (thread ID 63939) {eenemeenemuu}
2010-03-03 [C] Set theme "curve" as default theme {GauGau}
2010-03-03 [M] Removed outdated core themes {GauGau}
2010-03-01 [D] Added language manager section to docs {GauGau}
2010-03-01 [A] Added Greek language file (user contribution) {eenemeenemuu}