@@ -9,6 +9,14 @@
 <link rel="stylesheet" href="css/coppermine.css" type="text/css" />
 <link rel="stylesheet" href="themes/curve/style.css" type="text/css" />
 <link rel="shortcut icon" href="favicon.ico" />
+<!--[if lt IE 7]>
+<style>
+body {behavior: url(themes/curve/csshover3.htc );}
+.dropmenu li {width: 1px;}
+.dropmenu li a.firstlevel span.firstlevel {white-space: nowrap;}
+.main_menu {overflow: auto;}
+</style>
+<![endif]-->
 {JAVASCRIPT}
 <!--
   SVN version info:
